unpackaged/main/default/objects/Radio_TV_Ad_Cost_Line_Item__c/Radio_TV_Ad_Cost_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Radio/TV Ad Cost Line Item</label>
    <nameField>
        <displayFormat>RTADLI-{000000}</displayFormat>
        <label>Radio/TV Ad Cost Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Radio/TV Ad Cost Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>