unpackaged/main/default/objects/Radio_TV_Ad_Cost_Line_Item__c/fields/Flow_Interview_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_ID__c</fullName>
    <label>Flow Interview ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>