unpackaged/main/default/objects/Radio_TV_Ad_Cost_Line_Item__c/fields/Name_of_Party__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Party__c</fullName>
    <label>Name of Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>