unpackaged/main/default/objects/Radio_TV_Ad_Cost_Line_Item__c/fields/Radio_TV_Ad__c.field-meta.xml
<CustomField>
    <fullName>Radio_TV_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Radio/TV Ad</label>
    <referenceTo>Advertising_Item__c</referenceTo>
    <relationshipLabel>Radio/TV Ad Cost Line Items</relationshipLabel>
    <relationshipName>Radio_TV_Ad_Advertising_Item</relationshipName>
    <type>Lookup</type>
</CustomField>